<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.apnatutorials.androidedittext.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_change_listener_demo"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#000" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editor_action_listener_demo"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#000" />

    <EditText
        android:id="@+id/etImeOptiondemo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:singleLine="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adding_image_in_edittext_demo"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#000" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_account_box_black_24dp"
        android:hint="@string/enter_userid"
        android:inputType="text" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:hint="@string/enter_password"
        android:inputType="text" />

</LinearLayout>
